# openapi.yaml
@@ -126,7 +126,6 @@ paths:
         '500':
           description: Internal Server Error
 
-
   /v1/users:
     patch:
       tags:
@@ -252,8 +251,6 @@ paths:
         '500':
           description: Internal Server Error
 
-
-
   /v1/tweets/{id}:
     get:
       tags:
@@ -275,11 +272,6 @@ paths:
                 $ref: '#/components/schemas/Tweet'
         '500':
           description: Internal Server Error
-
-
-
-
-
 
   v1/tweets/{id_tweet}/like:
       post:
@@ -331,7 +323,6 @@ paths:
           description: Bad request
         '500':
           description: Internal server error
-
 
   /v1/tweets/{id_tweet}/retweet:
     post:
@@ -401,6 +392,69 @@ paths:
                   $ref: '#/components/schemas/SuccessResponse'
           '500':
             description: Internal Server Error
+            /v1/tweets/{tweet_id}:
+              patch:
+                tags:
+                  - Tweets
+                summary: Edit Tweet
+                security:
+                  - apiKey: [ ]
+                parameters:
+                  - name: tweet_id
+                    in: path
+                    description: ID of the tweet to edit
+                    required: true
+                    schema:
+                      type: integer
+                requestBody:
+                  required: true
+                  content:
+                    application/json:
+                      schema:
+                        type: object
+                        properties:
+                          text:
+                            type: string
+                          public:
+                            type: boolean
+                          only_followers:
+                            type: boolean
+                          only_mutual_followers:
+                            type: boolean
+                          only_me:
+                            type: boolean
+                        required:
+                          - text
+                          - public
+                          - only_followers
+                          - only_mutual_followers
+                          - only_me
+                      x-codegen-request-body-name: updatedTweet
+                responses:
+                  '200':
+                    description: Tweet updated successfully
+                    content:
+                      application/json:
+                        schema:
+                          $ref: '#/components/schemas/Tweet'
+                  '400':
+                    description: Invalid tweet data
+                    content:
+                      application/json:
+                        schema:
+                          $ref: '#/components/schemas/ErrorResponse'
+                  '401':
+                    description: Unauthorized
+                    content:
+                      application/json:
+                        schema:
+                          $ref: '#/components/schemas/ErrorResponse'
+                  '500':
+                    description: Internal Server Error
+                    content:
+                      application/json:
+                        schema:
+                          $ref: '#/components/schemas/ErrorResponse'
   /v1/tweets/{id_tweet}/delete:
     delete:
       tags:
